test/error-messages-cases/error-location/expected
<path>/error-messages-cases/error-location/src/ErrorLocation/Test.hs:13:5: error:
    • No instance for (Foo (F a b)) arising from a use of ‘foo’
    • From the typelevel rewrite rule: F x (F x y) ~ F x y
      In the expression: foo @(F a (F a b))
      In an equation for ‘f’: f = foo @(F a (F a b))
   |
13 | f = foo @(F a (F a b))
   |     ^^^^^^^^^^^^^^^^^^
